# study-ubuntu

./: Makefile  fifo_read.cpp  fifo_write.cpp  main  popen_ex1.c  popen_ex2.cpp
src/: bar.cpp  fifo_read.cpp
study-cmake/: CMakeLists.txt  foo.cc  main.cc
study-cmake/includes/: shape.h
study-cmake/lib/: CMakeLists.txt  shape.cc
study-makefile/: Makefile  main
study-makefile/src/: fifo_test.cpp  foo.cpp
